--- a/style.css
+++ b/style.css
@@ -5,16 +5,22 @@
       padding: 0;
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
+      
 }
 
+body {
+      background: linear-gradient(0deg, rgba(47,178,180,1) 0%, rgba(228,223,76,1) 100%);
+}
 .container {
       position: relative;
       margin: 4rem auto;
-      background: linear-gradient(0deg, rgba(47,178,180,1) 0%, rgba(228,223,76,1) 100%);
+      border: 4px solid rgba(128, 128, 128, 0.73);
       padding: 3rem;
-      width: 50%;
-      height: 30vh;
+      width: 80%;
+      max-width: 45rem;
+      height: 90vh;
       border-radius: 1rem;
+      box-shadow: 5px 5px rgba(186, 195, 149, 0.648);
 }
 
 
@@ -35,6 +41,10 @@
       border: none;
       border-radius: 5px;
       margin-right: 1rem;
+      background-color: #48487553;
+      color: white;
+      font-size: 17px;
+      outline: none;
 }
 
 .search button {
@@ -125,5 +135,3 @@ li{
       cursor: pointer;
       transform: scale(1.1);
 }
-
- 
